[package]
name = "relative-time-str"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
chrono = { version = "0.4", default-features = false, optional = true }
thiserror = "2.0.11"

[features]
default = []
chrono = ["dep:chrono"]
chrono-local = ["chrono", "chrono/clock"]
chrono-utc = ["chrono", "chrono/now"]
